src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pride Application Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>EOI Not Screened</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepted_Campaign_Continued__c</fullName>
        <inlineHelpText>Has this Pride Lead run previous campaign(s)? List the project codes.</inlineHelpText>
        <label>Accepted Campaign Continued</label>
        <picklist>
            <picklistValues>
                <fullName>APEPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCECU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVEDOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIAAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIDAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIKAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETADOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FARCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUACOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAMCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPALOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPBERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAOSTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADAGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATBOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCIECU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THAILA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLHABU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNBUNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNKAJA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNSERI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNWAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCSMON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWFMON</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Campaign__c</fullName>
        <inlineHelpText>Has this Pride Lead run previous campaign(s)? List the project codes.</inlineHelpText>
        <label>Accepted Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>AJOSBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHFRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHUAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAIMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAJACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALBAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAYTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIK2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHRTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Potorono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Raden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1- Rawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Seulawah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BORNEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROMNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAYTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEDESA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHIAPA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Cohort__c</fullName>
        <inlineHelpText>Has this Pride Lead run previous campaign(s)? List the cohort.</inlineHelpText>
        <label>Accepted Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Address_Comments__c</fullName>
        <label>Address Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_to_destructive_behaviors__c</fullName>
        <label>Alternative to destructive behaviors?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applying_for_Cohort__c</fullName>
        <inlineHelpText>Which cohort is this Pride Lead most appropriate for? Future is the default.</inlineHelpText>
        <label>Applying for Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent - Traditional</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applying_for_Program_at__c</fullName>
        <label>Applying for Program at:</label>
        <picklist>
            <picklistValues>
                <fullName>Georgetown University, USA (English)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Guadalajara, Mexico (Spanish)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor Agricultural University, Indonesia (Bahasa Indonesia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Forestry University, China (Mandarin Chinese)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_EE_O_part_of_your_current_strategy__c</fullName>
        <label>Are EE/O part of your current strategy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BES_VRM__Full_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BES_VRM__Initial_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BES_VRM__UpdateRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <formula>IF (LEN(Web_Cohort__c) &gt; 0, 
Case (Web_Cohort__c,
&quot;PEP&quot;, &quot;PEP Future&quot;,
&quot;China&quot;, &quot;China Future&quot;,
&quot;Guad&quot;, &quot;Guad Future&quot;,
&quot;Bogor&quot;, &quot;Bogor Future&quot;,
&quot;No Cohort Assigned&quot;
)
,
Case( text(Applying_for_Program_at__c) , 
&quot;Bogor Agricultural University, Indonesia (Bahasa Indonesia)&quot;, Case( text(Date_Seeking_Admission__c) , &quot;February 2010&quot;, &quot;Bogor 4&quot;,&quot;February 2011&quot;, &quot;Bogor 5&quot;,&quot;February 2012&quot;, &quot;Bogor 6&quot;,&quot;Lead Cohort Unknown&quot; ), 
&quot;University of Guadalajara, Mexico (Spanish)&quot;,Case( text(Date_Seeking_Admission__c) , &quot;February 2010&quot;, &quot;Guad 8&quot;,&quot;February 2011&quot;, &quot;Guad 9&quot;,&quot;February 2012&quot;, &quot;Guad 10&quot;,&quot;Lead Cohort Unknown&quot; ), 
&quot;Southwest Forestry University, China (Mandarin Chinese)&quot;,Case( text(Date_Seeking_Admission__c) , &quot;February 2010&quot;, &quot;China 2&quot;,&quot;February 2011&quot;, &quot;China 3&quot;,&quot;February 2012&quot;, &quot;China 4&quot;,&quot;Lead Cohort Unknown&quot; ), 
&quot;Georgetown University, USA (English)&quot;,Case( text(Date_Seeking_Admission__c) , &quot;February 2010&quot;, &quot;PEP 2&quot;,&quot;February 2011&quot;, &quot;PEP 3&quot;,&quot;February 2012&quot;, &quot;PEP 4&quot;,&quot;Lead Cohort Unknown&quot; ), 
&quot;Lead Cohort Unknown&quot; 
)
)</formula>
        <label>Cohort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company/Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>BINGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-lateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network/Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_threat_ranking_for_your_site__c</fullName>
        <label>Completed threat ranking for your site?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>In which countries is this Pride Lead interested in running Pride campaigns?</inlineHelpText>
        <label>Countries</label>
        <picklist>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cote d&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Seeking_Admission__c</fullName>
        <label>Date Seeking Admission</label>
        <picklist>
            <controllingField>Applying_for_Program_at__c</controllingField>
            <picklistValues>
                <fullName>February 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2012</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_their_experience_and_education__c</fullName>
        <label>Describe his/her experience / education</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_your_long_term_strategy__c</fullName>
        <label>Describe your long-term strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_have_an_ideal_campaign_manager__c</fullName>
        <description>Do you have in mind an ideal candidate for a Pride Campaign Manager?</description>
        <label>Do you have an ideal Campaign Manager?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_your_org_have_a_long_term_strategy__c</fullName>
        <label>Does your org have a long-term strategy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Done_acitvities_to_mitigate_top_threat__c</fullName>
        <label>Acitvities tried to mitigate top threat</label>
        <picklist>
            <picklistValues>
                <fullName>1 Land/Water Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1 Site/Area Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Resource &amp; Habitat Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Land/Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 Site/Area Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Invasive/Problematic Species Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 Habitat &amp; Natural Process Restoratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Species Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Species Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Species Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Species Re-Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 Ex-Situ Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Education &amp; Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Formal Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 Awareness &amp; Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Law &amp; Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Legislation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Policies &amp; Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Private Sector Standards &amp; Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.4 Compliance &amp; Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Livelihood, Economic &amp; Other Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 Linked Enterprises &amp; Livelihood Alte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Substitution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 Market Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.4 Conservation Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.5 Non-Monetary Values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 External Capacity Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Institutional &amp; Civil Society Deve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 Alliance &amp; Partnership Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_People_In_Around_Sit__c</fullName>
        <label>Estimated # of people in/around the site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Reach_of_Campaign_of_people__c</fullName>
        <label>Expected Reach of Campaign (# of people)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_Education_and_Outreach__c</fullName>
        <label>Experience in Education and Outreach</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Priority_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box to check if this is a lead with high giving potential that should be followed closely.</description>
        <label>High Priority File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_learn_about_Rare_Rare_Pride__c</fullName>
        <label>How did you learn about Rare/Rare Pride?</label>
        <picklist>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pride Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague/Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_would_Pride_address_those_threats__c</fullName>
        <label>How would Pride help address top threat?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>